# meanwhile

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Doxyfile.in  HACKING  INSTALL  Makefile.am  Makefile.darwin  Makefile.mingw  README  README.md  TODO  autogen.sh  configure.ac  meanwhile.pc.in  meanwhile.spec.in  test  test.conf.in  test.sh.in
doc/: .cvsignore  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README  channels.tex  doxygen.conf  draft-houri.tex  introduction.tex  meanwhile.tex  overview.tex  resources.tex  session.tex  urls.tex
doc/diagrams/: Makefile  README  chan_create.dia  chan_create.eps  chan_create_proxy.dia  chan_create_proxy.eps  epsscale.sh  overview_layers.dia  overview_layers.eps
samples/: .cvsignore  Makefile.am  README  README.md  build.in  clear_channels.c  logging_proxy.c  login_server.c  nocipher_proxy.c  redirect.c  redirect_server.c  sendmessage.c  socket.c
src/: .cvsignore  Makefile.am  channel.c  channel.h  cipher.c  cipher.h  common.c  common.h  encrypt.c  error.c  error.h  giosession.c  marshal.list  meanwhile.h  message.c  message.h  mpi.c  mw_channel.h  mw_cipher.h  mw_common.h  mw_compat.h  mw_config.h.in  mw_debug.c  mw_debug.h  mw_encrypt.h  mw_error.h  mw_giosession.h  mw_marshal.c  mw_marshal.h  mw_message.h  mw_mpi.h  mw_object.h  mw_parser.h  mw_queue.h  mw_service.h  mw_session.h  mw_srvc_aware.h  mw_srvc_conf.h  mw_srvc_dir.h  mw_srvc_ft.h  (+33 more)
src/mpi/: Makefile.am  mpi-config.h  mpi-types.h  mpi.c  mpi.h
src/python/: .cvsignore  Makefile.am  meanwhile.py  py_channel.c  py_meanwhile.c  py_meanwhile.h  py_service.c  py_session.c  py_srvc_aware.c  py_srvc_conf.c  py_srvc_im.c  py_srvc_resolve.c  py_srvc_store.c  test.py
